side meter complete

--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,41 @@
         </section>
     </div>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat rem labore voluptatum veritatis voluptatibus ea aliquid tempore saepe ipsam, quis velit quibusdam ipsa! Ipsum modi accusantium velit dolores, ipsa earum!</p>
+    <div class="meter-container">
+        <svg class="meter" viewBox="0 0 200 200">
+            <defs>
+              <!-- Our gradient fill #gradient -->
+              <linearGradient id="gradient1" gradientTransform="rotate(90)">
+                <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+              </linearGradient>
+                  </defs>
+            <path d="" fill="url('#gradient1')"></path>
+          </svg>
+          <svg class="meter" viewBox="0 0 200 200">
+            <defs>
+              <!-- Our gralinearGradientdient fill #gradient -->
+              <linearGradient id="gradient2" gradientTransform="rotate(90)">
+                <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+              </linearGradient>
+                  </defs>
+            <path d="" fill="url('#gradient2')"></path>
+          </svg>
+          <svg class="meter" viewBox="0 0 200 200">
+            <defs>
+              <!-- Our gradient fill #gradient -->
+              <linearGradient id="gradient3" gradientTransform="rotate(90)">
+                <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+              </linearGradient>
+            </defs>
+            <path d="" fill="url('#gradient3')"></path>
+          </svg>
+    </div>
+
 </body>
 </html>
