working text enter animation on click

--- a/src/index.html
+++ b/src/index.html
@@ -11,45 +11,75 @@
 
     <canvas class="webgl"></canvas>
     <div class="side-content">
-        <section class="loading-meter">
+        <div class="hero-text">
+            <div class="text-content original">
+                <h2 class="gradient-accent heading">
+                    DAREN HUA
+                </h2>
+                <p class="subheading">
+                    I use web <span class="technology">technology</span> to let you run your business.
+                </p>
+            </div>
+
+            <div class="text-content duplicate">
+                <h2 class="gradient-accent heading duplicate">
+                    DAREN HUA
+                </h2>
+                <p class="subheading">
+                    I use web <span class="technology">technology</span> to let you run your business.
+                </p>
+            </div>
+            <div class="enter-overlay">
+                <div class="enter-bg">
+                </div>
+                <div class="enter-line">
+                </div>
+            </div>
+        </div>
+        <div class="hsavc-text">
             
+        </div>
+        <div class="aves-text">
+
+        </div>
+        <section class="loading-meter">
+            <div class="meter-container">
+                <svg class="meter" viewBox="0 0 200 200">
+                    <defs>
+                      <!-- Our gradient fill #gradient -->
+                      <linearGradient id="gradient1" gradientTransform="rotate(90)">
+                        <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                        <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                        <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+                      </linearGradient>
+                          </defs>
+                    <path d="" fill="url('#gradient1')"></path>
+                  </svg>
+                  <svg class="meter" viewBox="0 0 200 200">
+                    <defs>
+                      <!-- Our gralinearGradientdient fill #gradient -->
+                      <linearGradient id="gradient2" gradientTransform="rotate(90)">
+                        <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                        <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                        <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+                      </linearGradient>
+                          </defs>
+                    <path d="" fill="url('#gradient2')"></path>
+                  </svg>
+                  <svg class="meter" viewBox="0 0 200 200">
+                    <defs>
+                      <!-- Our gradient fill #gradient -->
+                      <linearGradient id="gradient3" gradientTransform="rotate(90)">
+                        <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                        <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                        <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+                      </linearGradient>
+                    </defs>
+                    <path d="" fill="url('#gradient3')"></path>
+                  </svg>
+            </div>
+        
         </section>
-    </div>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat rem labore voluptatum veritatis voluptatibus ea aliquid tempore saepe ipsam, quis velit quibusdam ipsa! Ipsum modi accusantium velit dolores, ipsa earum!</p>
-    <div class="meter-container">
-        <svg class="meter" viewBox="0 0 200 200">
-            <defs>
-              <!-- Our gradient fill #gradient -->
-              <linearGradient id="gradient1" gradientTransform="rotate(90)">
-                <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-              </linearGradient>
-                  </defs>
-            <path d="" fill="url('#gradient1')"></path>
-          </svg>
-          <svg class="meter" viewBox="0 0 200 200">
-            <defs>
-              <!-- Our gralinearGradientdient fill #gradient -->
-              <linearGradient id="gradient2" gradientTransform="rotate(90)">
-                <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-              </linearGradient>
-                  </defs>
-            <path d="" fill="url('#gradient2')"></path>
-          </svg>
-          <svg class="meter" viewBox="0 0 200 200">
-            <defs>
-              <!-- Our gradient fill #gradient -->
-              <linearGradient id="gradient3" gradientTransform="rotate(90)">
-                <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-              </linearGradient>
-            </defs>
-            <path d="" fill="url('#gradient3')"></path>
-          </svg>
     </div>
 
 </body>
