--- a/src/index.html
+++ b/src/index.html
@@ -12,34 +12,67 @@
     <canvas class="webgl"></canvas>
     <div class="side-content">
         <div class="hero-text">
-            <div class="text-content original">
-                <h2 class="gradient-accent heading">
-                    DAREN HUA
-                </h2>
-                <p class="subheading">
-                    I use web <span class="technology">technology</span> to let you run your business.
-                </p>
-            </div>
-
-            <div class="text-content duplicate">
-                <h2 class="gradient-accent heading duplicate">
-                    DAREN HUA
-                </h2>
-                <p class="subheading">
-                    I use web <span class="technology">technology</span> to let you run your business.
-                </p>
-            </div>
-            <div class="enter-overlay">
-                <div class="enter-bg">
-                </div>
-                <div class="enter-line">
-                </div>
-            </div>
+            <div class="hero-text-content duplicate">
+              <h2 class="gradient-accent title">
+                  DAREN HUA
+              </h2>
+              <p class="subheading">
+                  I use web <span class="technology">technology</span> to let you run your business.
+              </p>
+          </div>
+          <div class="hero-text-content original">
+              <h2 class="gradient-accent title">
+                  DAREN HUA
+              </h2>
+              <p class="subheading">
+                  I use web <span class="technology">technology</span> to let you run your business.
+              </p>
+          </div>
+          <div class="hero-enter-overlay">
+              <div class="hero-enter-bg">
+              </div>
+              <div class="hero-enter-line">
+              </div>
+          </div>
         </div>
-        <div class="hsavc-text">
-            
+        <div class="isec-text">
+            <div class="isec-text-content">
+              <h3 class="accent heading">
+                <span>I</span>
+                <span>S</span>
+                <span>E</span>
+                <span>C</span>
+              </h3>
+              <p class="subheading">
+                2020-2021
+              </p>
+              <p class="body-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur recusandae, commodi ut facere ipsa fuga, in, exercitationem. </br></br>
+                Deleniti ducimus deserunt dolorem officiis rerum veniam. Animi aut incidunt perspiciatis quam dignissimos?
+              </p>
+            </div>
+            <div class="isec-enter-overlay">
+              <div class="isec-enter-line">
+              </div>
+            </div>
         </div>
         <div class="aves-text">
+          <div class="aves-text-content">
+            <h3 class="accent heading">
+              Aves Lair
+            </h3>
+            <p class="subheading">
+              2021
+            </p>
+            <p class="body-text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur recusandae, commodi ut facere ipsa fuga, in, exercitationem. </br></br>
+              Deleniti ducimus deserunt dolorem officiis rerum veniam. Animi aut incidunt perspiciatis quam dignissimos?
+            </p>
+          </div>
+          <div class="aves-enter-overlay">
+            <div class="aves-enter-line">
+            </div>
+          </div>
 
         </div>
         <section class="loading-meter">
