text ani with work number hover

--- a/src/index.html
+++ b/src/index.html
@@ -38,19 +38,23 @@
         <div class="isec-text">
             <div class="isec-text-content">
               <h3 class="accent heading">
-                <span>I</span>
-                <span>S</span>
-                <span>E</span>
-                <span>C</span>
+                <a target="_blank" href="https://ewh.ieee.org/conf/stem/">ISEC <img src="images/171454_link_icon.svg" class="link-img" alt="link"></a>
               </h3>
               <p class="subheading">
-                2020-2021
+                2020-2021, <span class="achievement">Achievement</span>
               </p>
               <p class="body-text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur recusandae, commodi ut facere ipsa fuga, in, exercitationem. </br></br>
                 Deleniti ducimus deserunt dolorem officiis rerum veniam. Animi aut incidunt perspiciatis quam dignissimos?
               </p>
             </div>
+            <div class="isec-logo">
+              <img src="images/ieee-isec.png" alt="Integrated STEM Education Conference Logo">
+            </div>  
+            <div class="isec-work-number">
+              <p>WORK #</p>
+              <h3>1</h3>
+            </div>  
             <div class="isec-enter-overlay">
               <div class="isec-enter-line">
               </div>
@@ -59,17 +63,24 @@
         <div class="aves-text">
           <div class="aves-text-content">
             <h3 class="accent heading">
-              Aves Lair
+              <a target="_blank" href="https://aveslair.com/">Aves Lair <img src="images/171454_link_icon.svg" class="link-img" alt="link"></a> 
             </h3>
             <p class="subheading">
-              2021
+              2021, <span class="freelance">Freelance</span>
             </p>
             <p class="body-text">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur recusandae, commodi ut facere ipsa fuga, in, exercitationem. </br></br>
               Deleniti ducimus deserunt dolorem officiis rerum veniam. Animi aut incidunt perspiciatis quam dignissimos?
             </p>
           </div>
-          <div class="aves-enter-overlay">
+          <div class="aves-logo">
+            <img src="images/Aves-Lair-Logo.png" alt="Aves Lair Logo">
+          </div>  
+          <div class="aves-work-number">
+            <p>WORK #</p>
+            <h3>2</h3>
+          </div>  
+        <div class="aves-enter-overlay">
             <div class="aves-enter-line">
             </div>
           </div>
