scroll bug fixed, working on tech ani

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,14 @@
                   DAREN HUA
               </h2>
               <p class="subheading">
-                  I use web <span class="technology">technology</span> to let you run your business.
+                  I use various 
+                  <a class="technology-link" href="#" target="_blank">
+                    <span>
+                      technologies
+                    </span>  
+                  </a>
+                <br>
+                   to build artistic software.
               </p>
           </div>
           <div class="hero-text-content original">
@@ -25,9 +32,17 @@
                   DAREN HUA
               </h2>
               <p class="subheading">
-                  I use web <span class="technology">technology</span> to let you run your business.
-              </p>
-          </div>
+                I use various 
+                <a class="technology-link" href="#" target="_blank">
+                  <span class="technology"
+                  data-list = '["THREE.JS", "GSAP", "BLENDER", "PHOTOSHOP", "MATLAB", "CFD", "PYTHON"]'>
+                  technologies
+                </span>
+                </a>
+              <br>
+                to build artistic software.
+            </p>
+        </div>
           <div class="hero-enter-overlay">
               <div class="hero-enter-bg">
               </div>
