working with 4 scroll blobs

--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,13 @@
                   DAREN HUA
               </h2>
               <p class="subheading">
-                  I use various 
-                  <a class="technology-link" href="#" target="_blank">
+                  I am a student with a passion for computer graphics and code!
+                  <!-- <a class="technology-link" href="#" target="_blank">
                     <span>
                       technologies
                     </span>  
                   </a>
-                <br>
-                   to build artistic software.
+                <br> -->
               </p>
           </div>
           <div class="hero-text-content original">
@@ -32,17 +31,19 @@
                   DAREN HUA
               </h2>
               <p class="subheading">
-                I use various 
-                <a class="technology-link" href="#" target="_blank">
+                I am a student with a passion for computer graphics and code!
+                <!-- <a class="technology-link" href="#" target="_blank">
                   <span class="technology"
                   data-list = '["THREE.JS", "GSAP", "BLENDER", "PHOTOSHOP", "MATLAB", "CFD", "PYTHON"]'>
                   technologies
                 </span>
                 </a>
-              <br>
-                to build artistic software.
+              <br> -->
             </p>
         </div>
+        <button class="scroll-button">
+          SEE MY WORK
+        </button>
           <div class="hero-enter-overlay">
               <div class="hero-enter-bg">
               </div>
@@ -98,9 +99,9 @@
         <div class="aves-enter-overlay">
             <div class="aves-enter-line">
             </div>
-          </div>
-
+        </div>        
         </div>
+        
         <section class="loading-meter">
             <div class="meter-container">
                 <svg class="meter" viewBox="0 0 200 200">
@@ -135,6 +136,17 @@
                       </linearGradient>
                     </defs>
                     <path d="" fill="url('#gradient3')"></path>
+                  </svg>
+                  <svg class="meter" viewBox="0 0 200 200">
+                    <defs>
+                      <!-- Our gradient fill #gradient -->
+                      <linearGradient id="gradient4" gradientTransform="rotate(90)">
+                        <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                        <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                        <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+                      </linearGradient>
+                    </defs>
+                    <path d="" fill="url('#gradient4')"></path>
                   </svg>
             </div>
         
