--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,11 @@
               <br> -->
             </p>
         </div>
-        <button class="scroll-button">
+        <button class="scroll-button button-style">
           SEE MY WORK
+        </button>
+        <button class="contact-button button-style">
+          CONTACT ME
         </button>
           <div class="hero-enter-overlay">
               <div class="hero-enter-bg">
@@ -96,60 +99,85 @@
             <p>WORK #</p>
             <h3>2</h3>
           </div>  
-        <div class="aves-enter-overlay">
-            <div class="aves-enter-line">
-            </div>
-        </div>        
+          <div class="aves-enter-overlay">
+              <div class="aves-enter-line">
+              </div>
+          </div>        
         </div>
-        
-        <section class="loading-meter">
-            <div class="meter-container">
-                <svg class="meter" viewBox="0 0 200 200">
-                    <defs>
-                      <!-- Our gradient fill #gradient -->
-                      <linearGradient id="gradient1" gradientTransform="rotate(90)">
-                        <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                        <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                        <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-                      </linearGradient>
-                          </defs>
-                    <path d="" fill="url('#gradient1')"></path>
-                  </svg>
-                  <svg class="meter" viewBox="0 0 200 200">
-                    <defs>
-                      <!-- Our gralinearGradientdient fill #gradient -->
-                      <linearGradient id="gradient2" gradientTransform="rotate(90)">
-                        <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                        <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                        <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-                      </linearGradient>
-                          </defs>
-                    <path d="" fill="url('#gradient2')"></path>
-                  </svg>
-                  <svg class="meter" viewBox="0 0 200 200">
-                    <defs>
-                      <!-- Our gradient fill #gradient -->
-                      <linearGradient id="gradient3" gradientTransform="rotate(90)">
-                        <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                        <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                        <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-                      </linearGradient>
-                    </defs>
-                    <path d="" fill="url('#gradient3')"></path>
-                  </svg>
-                  <svg class="meter" viewBox="0 0 200 200">
-                    <defs>
-                      <!-- Our gradient fill #gradient -->
-                      <linearGradient id="gradient4" gradientTransform="rotate(90)">
-                        <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                        <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                        <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-                      </linearGradient>
-                    </defs>
-                    <path d="" fill="url('#gradient4')"></path>
-                  </svg>
+        <div class="cta-text">
+          <div class="cta-bg">
+            <div class="cta-text-content">
+              <h3 class="heading">Contact Me!</h3>
+              <p class="subheading">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mattis condimentum urna.
+              </p>
             </div>
-        
+            <div class="temporary">
+              <div class="temp-content">
+                MAKE A FORM HERE
+              </div>
+            </div>
+            <div class="cta-email">
+              <img src="images/clipart2234682.png" alt="paper airplane clipart">
+              <div class="email-container">
+                Or email me at <a class="cta-email-address" href="mailto:someone@yoursite.com">someone@yoursite.com</a>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+
+        <section class="loading-meter">
+          <div class="scroll-nudge">
+            <div class='nudge-arrow'></div>
+            <div class='nudge-arrow'></div>
+          </div>        
+          <div class="meter-container">
+            <svg class="meter" viewBox="0 0 200 200">
+              <defs>
+                <!-- Our gradient fill #gradient -->
+                <linearGradient id="gradient1" gradientTransform="rotate(90)">
+                  <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                  <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                  <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+                </linearGradient>
+                    </defs>
+              <path d="" fill="url('#gradient1')"></path>
+            </svg>
+            <svg class="meter" viewBox="0 0 200 200">
+              <defs>
+                <!-- Our gralinearGradientdient fill #gradient -->
+                <linearGradient id="gradient2" gradientTransform="rotate(90)">
+                  <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                  <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                  <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+                </linearGradient>
+                    </defs>
+              <path d="" fill="url('#gradient2')"></path>
+            </svg>
+            <svg class="meter" viewBox="0 0 200 200">
+              <defs>
+                <!-- Our gradient fill #gradient -->
+                <linearGradient id="gradient3" gradientTransform="rotate(90)">
+                  <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                  <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                  <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+                </linearGradient>
+              </defs>
+              <path d="" fill="url('#gradient3')"></path>
+            </svg>
+            <svg class="meter" viewBox="0 0 200 200">
+              <defs>
+                <!-- Our gradient fill #gradient -->
+                <linearGradient id="gradient4" gradientTransform="rotate(90)">
+                  <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+                  <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+                  <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+                </linearGradient>
+              </defs>
+              <path d="" fill="url('#gradient4')"></path>
+            </svg>
+          </div>
         </section>
     </div>
 
