working version! no form or mobile.

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,22 @@
     <title>Webpack THREE.js Template</title>
 </head>
 <body>
-
+    <div id="overlay"><p>Mobile layout is temporarily under construction! Please visit this website on a desktop computer instead.</p></div>
     <canvas class="webgl"></canvas>
+    <header>
+      <img class="logo" src="images/logo.svg" alt="logo">
+      <ul class="icon-list">
+        <li class="icon-item">
+          <a href="#" class="icon-link"><img src="images/iconmonstr-instagram-11.svg" alt="instagram logo"></a>
+        </li>
+        <li class="icon-item">
+          <a href="#" class="icon-link"><img src="images/ArtStation-logomark-white.svg" alt="artstation logo"></a>
+        </li>
+        <li class="icon-item">
+          <a href="#" class="icon-link"><img src="images/iconmonstr-linkedin-1.svg" alt="linkedin logo"></a>
+        </li>
+      </ul>
+    </header>
     <div class="side-content">
         <div class="hero-text">
             <div class="hero-text-content duplicate">
@@ -114,7 +128,7 @@
             </div>
             <div class="temporary">
               <div class="temp-content">
-                MAKE A FORM HERE
+                Please contact me through email!
               </div>
             </div>
             <div class="cta-email">
