--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Webpack THREE.js Template</title>
+    <title>Daren Hua</title>
+    <meta name="description" content="Daren Hua's software development and digital art portfolio website.">
+
 </head>
 <body>
     <div id="overlay"><p>Mobile layout is temporarily under construction! Please visit this website on a desktop computer instead.</p></div>
@@ -32,12 +34,6 @@
               </h2>
               <p class="subheading">
                   I am a student with a passion for computer graphics and code!
-                  <!-- <a class="technology-link" href="#" target="_blank">
-                    <span>
-                      technologies
-                    </span>  
-                  </a>
-                <br> -->
               </p>
           </div>
           <div class="hero-text-content original">
@@ -46,13 +42,6 @@
               </h2>
               <p class="subheading">
                 I am a student with a passion for computer graphics and code!
-                <!-- <a class="technology-link" href="#" target="_blank">
-                  <span class="technology"
-                  data-list = '["THREE.JS", "GSAP", "BLENDER", "PHOTOSHOP", "MATLAB", "CFD", "PYTHON"]'>
-                  technologies
-                </span>
-                </a>
-              <br> -->
             </p>
         </div>
         <button class="scroll-button button-style">
