--- a/src/index.html
+++ b/src/index.html
@@ -1,188 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Daren Hua</title>
-    <meta name="description" content="Daren Hua's software development and digital art portfolio website.">
-
+  <title>Daren Hua</title>
+  <meta name="description" content="Daren Hua's software development and digital art portfolio website.">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
+
 <body>
-    <div id="overlay"><p>Mobile layout is temporarily under construction! Please visit this website on a desktop computer instead.</p></div>
-    <canvas class="webgl"></canvas>
-    <header>
-      <img class="logo" src="images/logo.svg" alt="logo">
-      <ul class="icon-list">
-        <li class="icon-item">
-          <a href="#" class="icon-link"><img src="images/iconmonstr-instagram-11.svg" alt="instagram logo"></a>
-        </li>
-        <li class="icon-item">
-          <a href="#" class="icon-link"><img src="images/ArtStation-logomark-white.svg" alt="artstation logo"></a>
-        </li>
-        <li class="icon-item">
-          <a href="#" class="icon-link"><img src="images/iconmonstr-linkedin-1.svg" alt="linkedin logo"></a>
-        </li>
-      </ul>
-    </header>
-    <div class="side-content">
-        <div class="hero-text">
-            <div class="hero-text-content duplicate">
-              <h2 class="gradient-accent title">
-                  DAREN HUA
-              </h2>
-              <p class="subheading">
-                  I am a student with a passion for computer graphics and code!
-              </p>
+  <div id="overlay">
+    <p>Mobile layout is temporarily under construction! Please visit this website on a desktop computer instead.</p>
+  </div>
+  <canvas class="webgl"></canvas>
+  <header>
+    <img class="logo" src="images/logo.svg" alt="logo">
+    <ul class="icon-list">
+      <li class="icon-item">
+        <a href="https://www.instagram.com/daren_hua/" target="_blank" class="icon-link"><img
+            src="images/iconmonstr-instagram-11.svg" alt="instagram logo"></a>
+      </li>
+      <li class="icon-item">
+        <a href="https://www.artstation.com/dhua" target="_blank" class="icon-link"><img
+            src="images/ArtStation-logomark-white.svg" alt="artstation logo"></a>
+      </li>
+      <li class="icon-item">
+        <a href="https://github.com/darenhua" target="_blank" class="icon-link"><img
+            src="images/github-icon.svg" alt="github logo"></a>
+      </li>
+
+      <li class="icon-item">
+        <a href="https://www.linkedin.com/in/daren-hua-70460a1aa/" target="_blank" class="icon-link"><img
+            src="images/iconmonstr-linkedin-1.svg" alt="linkedin logo"></a>
+      </li>
+    </ul>
+  </header>
+  <div class="side-content">
+    <div class="hero-text">
+      <div class="hero-text-content duplicate">
+        <h2 class="gradient-accent title">
+          DAREN HUA
+        </h2>
+        <p class="subheading">
+          I am a student with a passion for computer graphics and code!
+        </p>
+      </div>
+      <div class="hero-text-content original">
+        <h2 class="gradient-accent title">
+          DAREN HUA
+        </h2>
+        <p class="subheading">
+          I am a student with a passion for computer graphics and code!
+        </p>
+      </div>
+      <button class="scroll-button button-style">
+        SEE MY WORK
+      </button>
+      <button class="contact-button button-style">
+        CONTACT ME
+      </button>
+      <div class="hero-enter-overlay">
+        <div class="hero-enter-bg">
+        </div>
+        <div class="hero-enter-line">
+        </div>
+      </div>
+    </div>
+    <div class="isec-text">
+      <div class="isec-text-content">
+        <h3 class="accent heading">
+          <a target="_blank" href="https://ewh.ieee.org/conf/stem/">ISEC <img src="images/171454_link_icon.svg"
+              class="link-img" alt="link"></a>
+        </h3>
+        <p class="subheading">
+          2020-2021, <span class="achievement">Achievement</span>
+        </p>
+        <p class="body-text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur recusandae, commodi ut facere ipsa fuga,
+          in, exercitationem. </br></br>
+          Deleniti ducimus deserunt dolorem officiis rerum veniam. Animi aut incidunt perspiciatis quam dignissimos?
+        </p>
+      </div>
+      <div class="isec-logo">
+        <img src="images/ieee-isec.png" alt="Integrated STEM Education Conference Logo">
+      </div>
+      <div class="isec-work-number">
+        <p>WORK #</p>
+        <h3>1</h3>
+      </div>
+      <div class="isec-enter-overlay">
+        <div class="isec-enter-line">
+        </div>
+      </div>
+    </div>
+    <div class="aves-text">
+      <div class="aves-text-content">
+        <h3 class="accent heading">
+          <a target="_blank" href="https://aveslair.com/">Aves Lair <img src="images/171454_link_icon.svg"
+              class="link-img" alt="link"></a>
+        </h3>
+        <p class="subheading">
+          2021, <span class="freelance">Freelance</span>
+        </p>
+        <p class="body-text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur recusandae, commodi ut facere ipsa fuga,
+          in, exercitationem. </br></br>
+          Deleniti ducimus deserunt dolorem officiis rerum veniam. Animi aut incidunt perspiciatis quam dignissimos?
+        </p>
+      </div>
+      <div class="aves-logo">
+        <img src="images/Aves-Lair-Logo.png" alt="Aves Lair Logo">
+      </div>
+      <div class="aves-work-number">
+        <p>WORK #</p>
+        <h3>2</h3>
+      </div>
+      <div class="aves-enter-overlay">
+        <div class="aves-enter-line">
+        </div>
+      </div>
+    </div>
+    <div class="cta-text">
+      <div class="cta-bg">
+        <div class="cta-text-content">
+          <h3 class="heading">Contact Me!</h3>
+          <p class="subheading">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mattis condimentum urna.
+          </p>
+        </div>
+        <div class="temporary">
+          <div class="temp-content">
+            Please contact me through email!
           </div>
-          <div class="hero-text-content original">
-              <h2 class="gradient-accent title">
-                  DAREN HUA
-              </h2>
-              <p class="subheading">
-                I am a student with a passion for computer graphics and code!
-            </p>
         </div>
-        <button class="scroll-button button-style">
-          SEE MY WORK
-        </button>
-        <button class="contact-button button-style">
-          CONTACT ME
-        </button>
-          <div class="hero-enter-overlay">
-              <div class="hero-enter-bg">
-              </div>
-              <div class="hero-enter-line">
-              </div>
-          </div>
-        </div>
-        <div class="isec-text">
-            <div class="isec-text-content">
-              <h3 class="accent heading">
-                <a target="_blank" href="https://ewh.ieee.org/conf/stem/">ISEC <img src="images/171454_link_icon.svg" class="link-img" alt="link"></a>
-              </h3>
-              <p class="subheading">
-                2020-2021, <span class="achievement">Achievement</span>
-              </p>
-              <p class="body-text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur recusandae, commodi ut facere ipsa fuga, in, exercitationem. </br></br>
-                Deleniti ducimus deserunt dolorem officiis rerum veniam. Animi aut incidunt perspiciatis quam dignissimos?
-              </p>
-            </div>
-            <div class="isec-logo">
-              <img src="images/ieee-isec.png" alt="Integrated STEM Education Conference Logo">
-            </div>  
-            <div class="isec-work-number">
-              <p>WORK #</p>
-              <h3>1</h3>
-            </div>  
-            <div class="isec-enter-overlay">
-              <div class="isec-enter-line">
-              </div>
-            </div>
-        </div>
-        <div class="aves-text">
-          <div class="aves-text-content">
-            <h3 class="accent heading">
-              <a target="_blank" href="https://aveslair.com/">Aves Lair <img src="images/171454_link_icon.svg" class="link-img" alt="link"></a> 
-            </h3>
-            <p class="subheading">
-              2021, <span class="freelance">Freelance</span>
-            </p>
-            <p class="body-text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur recusandae, commodi ut facere ipsa fuga, in, exercitationem. </br></br>
-              Deleniti ducimus deserunt dolorem officiis rerum veniam. Animi aut incidunt perspiciatis quam dignissimos?
-            </p>
-          </div>
-          <div class="aves-logo">
-            <img src="images/Aves-Lair-Logo.png" alt="Aves Lair Logo">
-          </div>  
-          <div class="aves-work-number">
-            <p>WORK #</p>
-            <h3>2</h3>
-          </div>  
-          <div class="aves-enter-overlay">
-              <div class="aves-enter-line">
-              </div>
-          </div>        
-        </div>
-        <div class="cta-text">
-          <div class="cta-bg">
-            <div class="cta-text-content">
-              <h3 class="heading">Contact Me!</h3>
-              <p class="subheading">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mattis condimentum urna.
-              </p>
-            </div>
-            <div class="temporary">
-              <div class="temp-content">
-                Please contact me through email!
-              </div>
-            </div>
-            <div class="cta-email">
-              <img src="images/clipart2234682.png" alt="paper airplane clipart">
-              <div class="email-container">
-                Or email me at <a class="cta-email-address" href="mailto:someone@yoursite.com">someone@yoursite.com</a>
-              </div>
-            </div>
-  
+        <div class="cta-email">
+          <img src="images/clipart2234682.png" alt="paper airplane clipart">
+          <div class="email-container">
+            Or email me at <a class="cta-email-address" href="mailto:someone@yoursite.com">someone@yoursite.com</a>
           </div>
         </div>
 
-        <section class="loading-meter">
-          <div class="scroll-nudge">
-            <div class='nudge-arrow'></div>
-            <div class='nudge-arrow'></div>
-          </div>        
-          <div class="meter-container">
-            <svg class="meter" viewBox="0 0 200 200">
-              <defs>
-                <!-- Our gradient fill #gradient -->
-                <linearGradient id="gradient1" gradientTransform="rotate(90)">
-                  <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                  <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                  <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-                </linearGradient>
-                    </defs>
-              <path d="" fill="url('#gradient1')"></path>
-            </svg>
-            <svg class="meter" viewBox="0 0 200 200">
-              <defs>
-                <!-- Our gralinearGradientdient fill #gradient -->
-                <linearGradient id="gradient2" gradientTransform="rotate(90)">
-                  <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                  <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                  <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-                </linearGradient>
-                    </defs>
-              <path d="" fill="url('#gradient2')"></path>
-            </svg>
-            <svg class="meter" viewBox="0 0 200 200">
-              <defs>
-                <!-- Our gradient fill #gradient -->
-                <linearGradient id="gradient3" gradientTransform="rotate(90)">
-                  <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                  <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                  <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-                </linearGradient>
-              </defs>
-              <path d="" fill="url('#gradient3')"></path>
-            </svg>
-            <svg class="meter" viewBox="0 0 200 200">
-              <defs>
-                <!-- Our gradient fill #gradient -->
-                <linearGradient id="gradient4" gradientTransform="rotate(90)">
-                  <!-- Use CSS custom properties for the start / stop colors of the gradient -->
-                  <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
-                  <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
-                </linearGradient>
-              </defs>
-              <path d="" fill="url('#gradient4')"></path>
-            </svg>
-          </div>
-        </section>
+      </div>
     </div>
 
+    <section class="loading-meter">
+      <div class="scroll-nudge">
+        <div class='nudge-arrow'></div>
+        <div class='nudge-arrow'></div>
+      </div>
+      <div class="meter-container">
+        <svg class="meter" viewBox="0 0 200 200">
+          <defs>
+            <!-- Our gradient fill #gradient -->
+            <linearGradient id="gradient1" gradientTransform="rotate(90)">
+              <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+              <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+              <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+            </linearGradient>
+          </defs>
+          <path d="" fill="url('#gradient1')"></path>
+        </svg>
+        <svg class="meter" viewBox="0 0 200 200">
+          <defs>
+            <!-- Our gralinearGradientdient fill #gradient -->
+            <linearGradient id="gradient2" gradientTransform="rotate(90)">
+              <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+              <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+              <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+            </linearGradient>
+          </defs>
+          <path d="" fill="url('#gradient2')"></path>
+        </svg>
+        <svg class="meter" viewBox="0 0 200 200">
+          <defs>
+            <!-- Our gradient fill #gradient -->
+            <linearGradient id="gradient3" gradientTransform="rotate(90)">
+              <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+              <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+              <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+            </linearGradient>
+          </defs>
+          <path d="" fill="url('#gradient3')"></path>
+        </svg>
+        <svg class="meter" viewBox="0 0 200 200">
+          <defs>
+            <!-- Our gradient fill #gradient -->
+            <linearGradient id="gradient4" gradientTransform="rotate(90)">
+              <!-- Use CSS custom properties for the start / stop colors of the gradient -->
+              <stop id="gradientStop1" offset="0%" stop-color="var(--startColor)" />
+              <stop id="gradientStop2" offset="80%" stop-color="var(--stopColor)" />
+            </linearGradient>
+          </defs>
+          <path d="" fill="url('#gradient4')"></path>
+        </svg>
+      </div>
+    </section>
+  </div>
+
 </body>
+
 </html>
