replace lorem text

--- a/src/index.html
+++ b/src/index.html
@@ -92,9 +92,10 @@
           2020-2021, <span class="achievement">Achievement</span>
         </p>
         <p class="body-text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur recusandae, commodi ut facere ipsa fuga,
-          in, exercitationem. </br></br>
-          Deleniti ducimus deserunt dolorem officiis rerum veniam. Animi aut incidunt perspiciatis quam dignissimos?
+          I presented a poster at 2021 IEEE ISEC titled <i>An Autonomous Driving Simulation Platform as a Virtual HSAVC Competition Environment</i>. <br/> <br/>
+          In the poster, I discussed two MATLAB applications I developed that allows users to procedurally generate racing tracks and simulate a self-driving car's motion on it given a motor-control algorithm. <br/><br/>
+          <span class="link-text">Github</span>: <a href="https://github.com/darenhua/driving-simulation-platform">LINK</a> <br/>
+          <span class="link-text">Read More</span>: <a href="https://drive.google.com/file/d/1JzEM3Fymn5BoW8sK__ERQOk9etPooaOO/view?usp=sharing">LINK</a>
         </p>
       </div>
       <div class="isec-logo">
@@ -119,9 +120,9 @@
           2021, <span class="freelance">Freelance</span>
         </p>
         <p class="body-text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur recusandae, commodi ut facere ipsa fuga,
-          in, exercitationem. </br></br>
-          Deleniti ducimus deserunt dolorem officiis rerum veniam. Animi aut incidunt perspiciatis quam dignissimos?
+          I created a future-themed introduction clip for a venture-capital firm and startup accelerator's showcase event. 
+          <br/><br/>
+          <span class="link-text">Watch it here!</span>: <a href="https://youtu.be/E3_H615BmHo">LINK</a>
         </p>
       </div>
       <div class="aves-logo">
@@ -141,19 +142,18 @@
         <div class="cta-text-content">
           <h3 class="heading">Contact Me!</h3>
           <p class="subheading">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mattis condimentum urna.
+            I'm currently looking for 2022 summer internships! Please send me an email and tell me anything!
           </p>
         </div>
         <div class="temporary">
           <div class="temp-content">
-            Please contact me through email!
-          </div>
-        </div>
-        <div class="cta-email">
-          <img src="images/clipart2234682.png" alt="paper airplane clipart">
-          <div class="email-container">
-            Or email me at <a class="cta-email-address" href="mailto:someone@yoursite.com">someone@yoursite.com</a>
-          </div>
+            <div class="cta-email">
+              <img src="images/clipart2234682.png" alt="paper airplane clipart">
+              <div class="email-container">
+                Email me at <a class="cta-email-address" href="mailto:darenhua.freelance@gmail.com">darenhua.freelance@gmail.com</a>
+              </div>
+            </div>
+              </div>
         </div>
 
       </div>
